updated French and Galician translation

--- a/po/wesnoth-tutorial/fr.po
+++ b/po/wesnoth-tutorial/fr.po
@@ -1622,12 +1622,13 @@ msgstr ""
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1138
 msgid ""
-"No other units can reach that orc. I hope my $unit.language_name survives its counter-"
-"attack! I’d better grab more villages and move everyone closer for next turn."
+"No other units can reach that orc. I hope my $unit.language_name survives "
+"its counter-attack! I’d better grab more villages and move everyone closer "
+"for next turn."
 msgstr ""
-"Aucune autre unité ne peut atteindre cet orc. J'espère que mon $unit.language_name "
-"survivra à sa contre-attaque ! Je ferais mieux de conquérir plus de villages "
-"et de rapprocher tout le monde pour le prochain tour."
+"Aucune autre unité ne peut atteindre cet orc. J'espère que mon $unit."
+"language_name survivra à sa contre-attaque ! Je ferais mieux de conquérir "
+"plus de villages et de rapprocher tout le monde pour le prochain tour."
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1139
