--- a/po/wesnoth/gl.po
+++ b/po/wesnoth/gl.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-02-19 11:11+0100\n"
+"PO-Revision-Date: 2012-02-20 22:02+0100\n"
 "Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
 "com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -24,6 +24,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -3223,7 +3224,7 @@ msgstr "ralentizado"
 
 #: data/lua/wml-tags.lua:825 src/actions.cpp:1502
 msgid "female^petrified"
-msgstr "female^petrificada"
+msgstr "petrificada"
 
 #: data/lua/wml-tags.lua:825 src/actions.cpp:1502
 msgid "petrified"
@@ -6766,7 +6767,6 @@ msgstr "Agochar os plans de $player"
 msgid "Whiteboard Options"
 msgstr "Opcións de planificación"
 
-#~| msgid "Romanian Translation"
 #~ msgid "Ukrainian Translation"
 #~ msgstr "Tradución ao ucraíno"
 
