Updated the Spanish translation.

--- a/po/wesnoth-low/es.po
+++ b/po/wesnoth-low/es.po
@@ -4126,7 +4126,7 @@ msgstr ""
 "¡Calmaos, Aldar! El elfo tiene derecho a reprochar nuestras acciones, y "
 "tiene razón. Mi padre no ayudó cuando los orcos os atacaron. Pero mi padre "
 "está muerto. Demasiadas cosas hizo mi padre que soy incapaz de comprender; "
-"se volvió suspicaz y extraños en sus últimos días. ¡<i>Yo<i> soy el rey de "
+"se volvió suspicaz y extraños en sus últimos días. ¡<i>Yo</i> soy el rey de "
 "Wesnoth ahora, no mi padre! Y es mi intención renovar nuestra alianza "
 "firmando un nuevo tratado aquí, con ustedes."
 
