--- a/po/wesnoth-manual/pl.po
+++ b/po/wesnoth-manual/pl.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3.7+svn\n"
-"POT-Creation-Date: 2012-01-08 18:11+0100\n"
-"PO-Revision-Date: 2012-01-20 13:03+0100\n"
+"POT-Creation-Date: 2012-01-22 14:59+0100\n"
+"PO-Revision-Date: 2012-02-24 19:47+0100\n"
 "Last-Translator: Zbigniew Banach <z.banach@wsisiz.edu.pl>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -2113,6 +2113,15 @@ msgstr "Przesuń działanie w górę kolejki"
 # type: Content of: <book><chapter><section><simpara>
 #. type: Content of: <book><chapter><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:1307
+#, fuzzy
+#| msgid ""
+#| "Each side is given some amount of gold to begin with, and receives 2 gold "
+#| "pieces per turn, plus 2 more gold pieces for every village that side "
+#| "controls. In a campaign, starting gold is a minimum amount defined by the "
+#| "scenario, which is typically lower as the difficulty level increases. In "
+#| "addition you often get a percentage of gold to carry over from the last "
+#| "scenario played. The exact percentage depends on the scenario and is "
+#| "usually displayed as part of the scenario objectives."
 msgid ""
 "Each side is given some amount of gold to begin with, and receives 2 gold "
 "pieces per turn, plus 2 more gold pieces for every village that side "
@@ -2122,10 +2131,11 @@ msgid ""
 msgstr ""
 "Każda strona otrzymuje pewną ilość początkową złota, a następnie co turę "
 "dostaje 2 sztuki złota plus 2 kolejne sztuki za każdą kontrolowaną wioskę. W "
-"kampaniach ilość złota na początku scenariusza to większa z dwóch wartości: "
-"80% złota posiadanego po zakończeniu poprzedniego scenariusza lub minimalna "
-"wartość zdefiniowana dla danego scenariusza, która zazwyczaj maleje wraz ze "
-"wzrostem poziomu trudności."
+"kampaniach ilość złota na początku scenariusza to minimalna wartość "
+"zdefiniowana dla danego scenariusza, która zazwyczaj maleje wraz ze wzrostem "
+"poziomu trudności. Dodatkowo często będziesz zachowywać pewną część złota "
+"posiadanego pod koniec poprzedniego scenariusza (zazwyczaj zobaczysz taką "
+"informację w celach scenariusza)."
 
 #. type: Content of: <book><chapter><section><section><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:1313
