--- a/po/wesnoth-tutorial/sk.po
+++ b/po/wesnoth-tutorial/sk.po
@@ -1560,12 +1560,13 @@ msgstr "Posuň ďalšie jednotky a obsaď dediny, potom zvoľ <b>ukončiť kolo<
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1138
 msgid ""
-"No other units can reach that orc. I hope my $unit.language_name survives its counter-"
-"attack! I’d better grab more villages and move everyone closer for next turn."
+"No other units can reach that orc. I hope my $unit.language_name survives "
+"its counter-attack! I’d better grab more villages and move everyone closer "
+"for next turn."
 msgstr ""
-"Už žiadne ďalšie jednotky nemôžu orka napadnúť. Dúfam, že $unit.language_name prežije "
-"protiútok! Postarám sa o zaberanie ďalších dedín a presuniem svoje sily "
-"bližšie."
+"Už žiadne ďalšie jednotky nemôžu orka napadnúť. Dúfam, že $unit."
+"language_name prežije protiútok! Postarám sa o zaberanie ďalších dedín a "
+"presuniem svoje sily bližšie."
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1139
