eclipse plugin: enhance the project report...
...by displaying the parsed campaign and scenario IDs

--- a/utils/umc_dev/org.wesnoth/src/org/wesnoth/messages.properties
+++ b/utils/umc_dev/org.wesnoth/src/org/wesnoth/messages.properties
@@ -219,7 +219,7 @@ WesnothProjectPage_0=General
 WesnothProjectPage_1=Wesnoth install:
 WesnothProjectPage_2=The currently selected install does not exist. Please select another.
 WesnothProjectReport_0=Please select a project first.
-WesnothProjectReport_4=\ - Scenarios: %d \n - Maps: %d \n - Units: %d\n
+WesnothProjectReport_4=Campaign ID: %s \nScenario IDs: %s \nMaps: %d \nUnits: %d\n
 WizardGeneratorPage404_1=content not found for tag '%s'
 WizardGeneratorPage404_3=404 Not Found
 WizardGeneratorPage404_4=Ooops\!
