--- a/po/wesnoth/it.po
+++ b/po/wesnoth/it.po
@@ -9,18 +9,20 @@
 # Alessio D'Ascanio <otaku@fastwebnet.it>, 2004, 2005.
 # Luciano Montanaro <mikelima@cirulla.net>, 2006, 2007, 2008, 2009, 2010, 2011.
 # Luciano Montanaro <mikelima@gmail.com>, 2012.
+# Antonio Rosella <arosella@yahoo.com>, 2012.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-01-27 22:49+0100\n"
-"Last-Translator: Antonio \"Antro\" Rosella <arosella@yahoo.com>\n"
-"Language-Team: Italian <kde-i18n-it@kde.org>\n"
+"PO-Revision-Date: 2012-02-20 11:21+0100\n"
+"Last-Translator: Antonio Rosella <arosella@yahoo.com>\n"
+"Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8-bit\n"
 "X-Generator: Lokalize 1.2\n"
 "X-Poedit-Language: Italian\n"
 "X-Poedit-Country: ITALY\n"
@@ -4552,7 +4554,7 @@ msgid ""
 "Unknown command '$command', try $help_command for a list of available "
 "commands."
 msgstr ""
-"Comando sconosciuto «$comando», usa $help_command per vedere l’elenco dei "
+"Comando sconosciuto «$command», usa $help_command per vedere l’elenco dei "
 "comandi disponibili."
 
 #: src/menu_events.cpp:2059
