--- a/po/wesnoth-tutorial/ru.po
+++ b/po/wesnoth-tutorial/ru.po
@@ -1587,11 +1587,13 @@ msgstr ""
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1138
 msgid ""
-"No other units can reach that orc. I hope my $unit.language_name survives its counter-"
-"attack! I’d better grab more villages and move everyone closer for next turn."
+"No other units can reach that orc. I hope my $unit.language_name survives "
+"its counter-attack! I’d better grab more villages and move everyone closer "
+"for next turn."
 msgstr ""
-"Никому больше не добраться до этого орка. Надеюсь, $unit.language_name переживёт его "
-"контратаку! Займу-ка я побольше деревень и подтяну своих солдат поближе."
+"Никому больше не добраться до этого орка. Надеюсь, $unit.language_name "
+"переживёт его контратаку! Займу-ка я побольше деревень и подтяну своих "
+"солдат поближе."
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1139
