updated Galician translation

--- a/po/wesnoth-aoi/gl.po
+++ b/po/wesnoth-aoi/gl.po
@@ -7,23 +7,23 @@
 # Fran Diéguez <fran dot dieguez at glug dot es>, 2008.
 # Adrián Chaves Fernández <adriyetichaves@gmail.com>, 2010.
 # Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>, 2011.
-# Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail.com>, 2011.
+# Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail.com>, 2011, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2011-09-12 11:59+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"POT-Creation-Date: 2012-02-25 15:51+0100\n"
+"PO-Revision-Date: 2012-03-18 19:52+0100\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "com>\n"
+"com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.2\n"
+"X-Generator: Lokalize 1.4\n"
 
 # Fran Diéguez <fran dot dieguez at glug dot es>, 2008.
 # Leandro Regueiro <leandro.regueiro@gmail.com>, 2008.
@@ -207,7 +207,7 @@ msgid ""
 "Wesmere."
 msgstr ""
 "A primeira vez que se avistaron orcos foi nas marcas ao norte do Bosque de "
-"Wesmere."
+"Güesmer."
 
 #. [objectives]
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:99
@@ -761,6 +761,7 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:316
+#, fuzzy
 msgid ""
 "Lord Erlornas never saw the blade that felled him. He died on the spot, with "
 "not a chance to issue last commands or farewells. Without him his wardens "
@@ -783,6 +784,7 @@ msgstr ""
 
 #. [message]: role=Adviser
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:339
+#, fuzzy
 msgid "We can’t carry on Lord, the men are too tired. We have to fall back."
 msgstr ""
 "Non podemos seguir, señor. Os guerreiros están esgotados. Temos que volver."
@@ -1004,13 +1006,14 @@ msgstr "Non! Non pode ser!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/04_Valley_of_Trolls.cfg:305
+#, fuzzy
 msgid ""
 "Soon after Erlornas died, the elven party, lacking a leader and pressed from "
 "all sides, scattered and fled. Their retreat to Wesmere was arduous and long."
 msgstr ""
 "Pouco despois da morte de Erlornas, a partida de elfos, sen ninguén que os "
 "liderase e víndose rodeados por todas partes, dispersáronse e fuxiron. A súa "
-"retirada a Wesmere foi longa e ardua."
+"retirada a Güesmer foi longa e ardua."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/04_Valley_of_Trolls.cfg:310
@@ -1093,7 +1096,7 @@ msgid ""
 msgstr ""
 "Tras un día de ben merecido descanso, os elfos retomaron o camiño cara o "
 "norte. Eran unhas terras descoñecidas, e nin os exploradores máis "
-"aventurados de Wesmere as frecuentaban."
+"aventurados de Güesmer as frecuentaban."
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:28
@@ -1266,7 +1269,7 @@ msgid ""
 "of Wesmere. I find your presence here... surprising."
 msgstr ""
 "Seica decidiu aceptar a miña invitación. Ben. Benvida, son Erlornas, señor "
-"de Wesmere. A vosa presencia nestas terras resúltame… sorprendente."
+"de Güesmer. A vosa presencia nestas terras resúltame… sorprendente."
 
 #. [message]: speaker=Linaera
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:244
@@ -1450,7 +1453,7 @@ msgid ""
 "Ka’lian has deliberated, and asks you to defeat Rualsha quickly before he "
 "can muster a full invasion force."
 msgstr ""
-"Señor! Levamos unha semana de dura cabalgada para alcanzalo! O Ka'lian "
+"Señor! Levamos unha semana de dura cabalgada para alcanzalo! O Cälian "
 "deliberou, e pídelle que derrote a Rualsa antes de que poida xuntar unha "
 "forza suficientemente forte para invadirnos."
 
