--- a/po/wesnoth-dw/gl.po
+++ b/po/wesnoth-dw/gl.po
@@ -1,14 +1,13 @@
-# Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>, 2011.
+# Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>, 2011, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2011-11-01 19:45+0100\n"
-"Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"POT-Creation-Date: 2012-02-25 15:51+0100\n"
+"PO-Revision-Date: 2012-03-19 09:20+0100\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
-"Language: \n"
+"Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,7 +19,8 @@ msgstr ""
 "com>\n"
 "com>\n"
 "com>\n"
-"X-Generator: Lokalize 1.2\n"
+"com>\n"
+"X-Generator: Lokalize 1.4\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. [campaign]: id=Dead_Water
@@ -648,6 +648,7 @@ msgstr "Tes que ser valente. Atácao!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:481
+#, fuzzy
 msgid ""
 "But it isn’t attacking <i>me</i>. Do you think, with its master gone, it "
 "might desire a new one?"
@@ -1042,8 +1043,8 @@ msgid ""
 "You! Merman! You have some property of oursss. Return it at once if you "
 "value your life."
 msgstr ""
-"Ei, vós, sirénidosss! Creo que tedes algo que é meu. Devolvédemo se non "
-"queredes pagar as consecuenciasss."
+"Ei, vóss, sirénidoss! Creo que tedess algo que é meu. Devolvédemo se non "
+"queredess pagar ass consecuensiass."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:388
@@ -1083,7 +1084,7 @@ msgstr ""
 #. [message]: speaker=Gilak
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:411
 msgid "Foolish merman! You will sssoon wish you had minded your own affairs."
-msgstr "Estúpidos sirénidosss! Arrepentirédesvosss."
+msgstr "Estúpidoss sirénidoss! Arrepentirédesvoss."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:420
