--- a/po/wesnoth-help/gl.po
+++ b/po/wesnoth-help/gl.po
@@ -16,14 +16,14 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-02-25 15:51+0100\n"
-"PO-Revision-Date: 2012-02-26 23:00+0100\n"
-"Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"PO-Revision-Date: 2012-03-18 20:23+0100\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -753,7 +753,7 @@ msgstr ""
 #. [topic]: id=irdya
 #: data/core/encyclopedia/geography.cfg:63
 msgid "Irdya"
-msgstr "Iridia"
+msgstr "Irïdia"
 
 #. [topic]: id=irdya
 #: data/core/encyclopedia/geography.cfg:64
@@ -764,7 +764,7 @@ msgid ""
 "“the world” or, poetically, “the wide green world”."
 msgstr ""
 "O nome do mundo no que está o <ref>dst='kingdom_wesnoth' text='Reino de "
-"Wesnoth'</ref> chámase «Iridia». Porén, o termo rara vez se usa na era que "
+"Wesnoth'</ref> chámase «Irïdia». Porén, o termo rara vez se usa na era que "
 "reflicte o mapa principal, sendo máis habituais as referencias a este coma "
 "«o mundo» ou, poeticamente, coma «o gran mundo verde»."
 
@@ -984,8 +984,7 @@ msgstr ""
 "    • Cidades salientables:\n"
 "          ◦ Glendro. Capital dunha tribo de orcos.\n"
 "          ◦ Romir. Outra capital dunha tribo de orcos.\n"
-"          ◦ Wesmere. Cidade na que se atopa o Ka’lian, o consello dos "
-"elfos.\n"
+"          ◦ Güesmer. Cidade na que se atopa o Cälian, o consello dos elfos.\n"
 "          ◦ As Portas dos Ananos. Trátase dunha cidade da rexión de Neilga, "
 "ao sur das Montañas Profundas, na que conviven ananos e humanos. A cidade é "
 "un famoso lugar de comercio.\n"
@@ -993,14 +992,14 @@ msgstr ""
 "exploradores que cruzaron as augas do Gran Río durante a idade dourada de "
 "Wesnoth. Están na actualidade abandonadas. O zona de bosque ao nordeste de "
 "Elensefar no que estaban estas vilas fora outrora a provincia de Anubin, "
-"máis coñecida a día de hoxe polo nome co que a coñecen os elfos: Wesmere.\n"
+"máis coñecida a día de hoxe polo nome co que a coñecen os elfos: Güesmer.\n"
 "\n"
 "    • Xeografía:\n"
 "          ◦ Montañas Profundas. Unha barreira infranqueable de montañas "
 "entre a zona do río e as Chairas Nórdicas.\n"
 "          ◦ Cairos. Unha zona especialmente difícil de transitar, formada "
 "por picos moi altos e situada ao suroeste da Lagoa de Brugue e ao norte do "
-"Bosque de Wesmere. É a parte máis inhóspita e perigosa das Montañas "
+"Bosque de Güesmer. É a parte máis inhóspita e perigosa das Montañas "
 "Profundas, habitada unicamente por eremitas, tolos e magos.\n"
 "          ◦ Lameiro do Terror. Un gran lameiro situado entre as Montañas "
 "Profundas e o Gran Río. É un lugar bastante perigoso.\n"
@@ -1011,8 +1010,8 @@ msgstr ""
 "lingua dos elfos: Arcan-doria.\n"
 "          ◦ Río Listra. Afluente do Gran Río pola súa beira norte, e "
 "receptor das augas do Río Xacer.\n"
-"          ◦ Bosque de Lintanir. É o extremo sur do Gran Bosque nórdico, unha "
-"enorme fraga da que só os elfos coñecen os seus límites polo norte e o "
+"          ◦ Bosque de Lintanir. É o extremo sur do Gran Bosque do Norte, "
+"unha enorme fraga da que só os elfos coñecen os seus límites polo norte e o "
 "leste. A súa capital é Elensiria, e poucos son os humanos que algunha vez "
 "tiveron a sorte de poder pór un pé nela.\n"
 "          ◦ Gran Río. Este río nace nalgunha parte al leste das terras "
@@ -1047,9 +1046,9 @@ msgstr ""
 "    • Cidades salientables:\n"
 "          ◦ Ningunha coñecida.\n"
 "    • Xeografía:\n"
-"          ◦ Bosque de Aethen. Trátase do bosque máis grande da parte sur, "
-"que se estende alén do que a vista humana pode alcanzar polo suroeste, e "
-"está habitado por <ref>dst='..race_elf' text='elfos'</ref>."
+"          ◦ Bosque do Edén. Trátase do bosque máis grande da parte sur, que "
+"se estende alén do que a vista humana pode alcanzar polo suroeste, e está "
+"habitado por <ref>dst='..race_elf' text='elfos'</ref>."
 
 #. [topic]: id=heart_mountains
 #: data/core/encyclopedia/geography.cfg:146
@@ -5271,7 +5270,7 @@ msgstr ""
 "seus arqueiros en velocidade e puntería. Todos os elfos comparten tamén unha "
 "inexplicábel afección pola natureza salvaxe, e adoitan sentirse incómodos "
 "nos espazos abertos sen vexetación. Viven principalmente nos bosques do Gran "
-"Continente: o bosque de Aethen no sueste, Wesmere no noroeste e os bastos "
+"Continente: o Bosque do Edén no sueste, Güesmer no noroeste e os bastos "
 "bosques nórdicos, co bosque Lintanir no seu límite sur.\n"
 "\n"
 "Os elfos son a especie máis antiga do continente, pode que a excepción dos "
