--- a/po/wesnoth-httt/gl.po
+++ b/po/wesnoth-httt/gl.po
@@ -5,14 +5,14 @@ msgstr ""
 "Project-Id-Version: wesnoth-httt\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-02-25 15:51+0100\n"
-"PO-Revision-Date: 2012-03-02 23:43+0100\n"
-"Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"PO-Revision-Date: 2012-03-18 19:57+0100\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -2225,7 +2225,7 @@ msgid ""
 "is Kalenz, a great lord of the Northern Elves who came to the Council to "
 "offer us the support of his people."
 msgstr ""
-"Estiven co Ka’lian, o gran consello dos elfos. Este é Cälén, un gran señor "
+"Estiven co Cälian, o gran consello dos elfos. Este é Cälén, un gran señor "
 "dos elfos do norte que viu ao consello a ofrecernos o apoio da súa xente."
 
 #. [message]: speaker=Kalenz
@@ -2245,7 +2245,7 @@ msgstr ""
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/06_The_Siege_of_Elensefar.cfg:590
 msgid "The Ka’lian has met and decided: we must capture the Sceptre of Fire."
-msgstr "O Ka’lian reuniuse e decidiu: debemos conseguir o Cetro de Lume."
+msgstr "O Cälian reuniuse e decidiu: debemos conseguir o Cetro de Lume."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/06_The_Siege_of_Elensefar.cfg:595
@@ -2325,7 +2325,7 @@ msgid ""
 "about with steel; Kalenz and I barely escaped, and Chantal cannot get out. "
 "Until we are stronger, we must go where the orcs are not."
 msgstr ""
-"Non podemos ir a Wesmere, os orcos de Axevier teñen fortemente vixiados os "
+"Non podemos ir a Güesmer, os orcos de Axevier teñen fortemente vixiados os "
 "arredores. A min e a Cälén xa nos custou bastante fuxir, e Chantal tivo que "
 "quedarse. Ata que reunamos máis forzas, teremos que manternos á marxe dos "
 "orcos."
@@ -3623,7 +3623,7 @@ msgstr "Leva a Conrad á entrada dos túneles dos ananos."
 #. [side]: type=Orcish Slurbow, id=Knafa-Telfar
 #: data/campaigns/Heir_To_The_Throne/scenarios/13_The_Dwarven_Doors.cfg:74
 msgid "Knafa-Telfar"
-msgstr " Nafa-Telfar"
+msgstr "Nafa-Telfar"
 
 #. [side]: type=Orcish Warlord, id=Urug-Tan
 #: data/campaigns/Heir_To_The_Throne/scenarios/13_The_Dwarven_Doors.cfg:94
@@ -5009,7 +5009,7 @@ msgstr "Derrota a calquera dos líderes inimigos."
 #. [side]: type=Death Knight, id=Unan-Ka'tall
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:110
 msgid "Unan-Ka’tall"
-msgstr "Unan-Catal"
+msgstr "Unan-Cätal"
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:176
@@ -8685,7 +8685,7 @@ msgid ""
 "Delfador raised the child Konrad under the protection of the Elves, watching "
 "sadly as Asheviere’s reign of terror over the land began..."
 msgstr ""
-"Delfador fuxiu ao bosque do Edén, alén da fronteira sudoeste de Wesnoth, e "
+"Delfador fuxiu ao Bosque do Edén, alén da fronteira sudoeste de Wesnoth, e "
 "deixou ao pequeno Conrad baixo a protección dos elfos, mentres observaba con "
 "tristura como comezaba o reinado de terror de Axevier sobre a terra…"
 
