updated Galician translation

--- a/po/wesnoth-dm/gl.po
+++ b/po/wesnoth-dm/gl.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-02-25 15:51+0100\n"
-"PO-Revision-Date: 2012-02-26 16:27+0100\n"
-"Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"PO-Revision-Date: 2012-03-18 20:23+0100\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -1705,7 +1705,7 @@ msgid ""
 "unmaking of the world."
 msgstr ""
 "Eu son a vontade de An-Usrukhar, o máis grande dos magos, o que cabalgou por "
-"Iridia na mañá dos tempos, que agora dorme nunha morte alén da morte ata que "
+"Irïdia na mañá dos tempos, que agora dorme nunha morte alén da morte ata que "
 "o mundo chegue á súa fin."
 
 #. [message]: speaker=Delfador
@@ -2757,10 +2757,10 @@ msgid ""
 "wandered the Great Continent in errantry."
 msgstr ""
 "Había un elfo chamado Cälén que antes de que nacera Delfador xa fora durante "
-"séculos unha lenda entre a súa xente. «A lenda de Wesmere» fala sobre "
+"séculos unha lenda entre a súa xente. «A lenda de Güesmer» fala sobre "
 "algunhas das súas fazañas. Cunha vida prolongada pola poción dun nigromante, "
 "renunciou o seu título de gran señor dos elfos tras a morte da súa amada "
-"esposa, Cleodil, e vagou errante por todo o Gran Continente."
+"esposa, Cleodil, e vagou errante polo Gran Continente."
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/13_The_Return_of_Trouble.cfg:26
