--- a/po/wesnoth-multiplayer/gl.po
+++ b/po/wesnoth-multiplayer/gl.po
@@ -9,15 +9,14 @@
 # Fran Diéguez <fran dot dieguez at glug dot es>, 2008.
 # Adrián Chaves Fernández <adriyetichaves@gmail.com>, 2010.
 # Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>, 2011.
-# Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail.com>, 2011.
+# Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail.com>, 2011, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-02-18 13:15+0100\n"
-"PO-Revision-Date: 2011-12-15 21:22+0100\n"
-"Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"POT-Creation-Date: 2012-02-25 15:51+0100\n"
+"PO-Revision-Date: 2012-03-18 20:25+0100\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
@@ -28,8 +27,9 @@ msgstr ""
 "com>\n"
 "com>\n"
 "com>\n"
+"com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.2\n"
+"X-Generator: Lokalize 1.4\n"
 
 #. [generic_multiplayer]: id=user_map
 #: data/multiplayer/_main.cfg:8
@@ -1054,7 +1054,7 @@ msgstr ""
 "que foi a cidadela subterránea dos demos Kah Ruuk. Os Kah Ruuk eran unha "
 "clase de demos malvados e astutos que se alimentaban de persoas, e que "
 "aterraron ás xentes das terras orientais durante case catro séculos, antes "
-"de desaparecer completamente de Iridia. Dende entón, moitas foron as "
+"de desaparecer completamente de Irïdia. Desde entón, moitas foron as "
 "faccións que competiron polo dominio da guarida dos demos, coa esperanza de "
 "descubrir a estraña e misteriosa maxia dos seus creadores."
 
