--- a/po/wesnoth/gl.po
+++ b/po/wesnoth/gl.po
@@ -16,14 +16,14 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-02-25 15:51+0100\n"
-"PO-Revision-Date: 2012-02-27 19:17+0100\n"
-"Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"PO-Revision-Date: 2012-03-19 18:21+0100\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -1472,9 +1472,9 @@ msgstr ""
 "Adelino,Adelmo,Adelo,Ademar,Adolfo,Adonis,Adosindo,Adrán,Adriano,Adrián,"
 "Afonso,Africano,Afrodisio,Agamenón,Ágape,Agapito,Agatón,Agostiño,Agosto,"
 "Agripino,Airas,Aitor,Aladino,Alán,Alano,Alarico,Albano,Alberte,Alberto,"
-"Albertos,Albán,Álvaro,Antón,Antonio,Carlos,Ernesto,Estevo,Felipe,Fernán, "
-"Fernando,Fran,Francisco,Gonzalo,Ignacio,Luís,Manuel,Matías,Miguel,Pablo,"
-"Pascual, Pedro,Santiago,Xesús,Xoán,Xosé"
+"Albertos,Albán,Álvaro,Antón,Antonio,Carlos,Ernesto,Estevo,Felipe,Fernán,"
+"Fernando,Fran,Francisco,Gonzalo,Ignacio,Leandro,Leopoldo,Luís,Manuel,Matías,"
+"Miguel,Pablo,Pascual, Pedro,Roberto,Santiago,Sebastián,Xesús,Xoán,Xosé"
 
 # Véxase o ficheiro de «Nomes». Estes son os de humana.
 #: data/core/macros/names.cfg:39
@@ -2975,7 +2975,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:164
 msgid "<i>Arcane</i> attacks are very powerful against undead."
-msgstr "Os ataques <i>arcanos</i> son moi potentes contra os non mortos."
+msgstr "Os ataques <i>arcanos</i> son moi efectivos contra os non mortos."
 
 #. [tip]
 #: data/hardwired/tips.cfg:165
