--- a/po/wesnoth-httt/la.po
+++ b/po/wesnoth-httt/la.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth - HTTT 1.2.0\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-22 15:00+0100\n"
+"POT-Creation-Date: 2011-12-15 10:39+0100\n"
 "PO-Revision-Date: 2012-01-09 23:10+0100\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
 "Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
@@ -7782,13 +7782,9 @@ msgstr ""
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/24_Battle_for_Wesnoth.cfg:384
-#, fuzzy
-#| msgid ""
-#| "... and personal counselor to my King and my <i>friend</i>, Garard the "
-#| "Second, who you most <i>foully</i> betrayed..."
 msgid ""
 "... and personal counselor to my King and my <i>friend</i>, Garard the "
-"Second, whom you most <i>foully</i> betrayed..."
+"Second, who you most <i>foully</i> betrayed..."
 msgstr ""
 "... et consiliarius proprius Regis ac <i>amici</i>, Garardi II, quem "
 "<i>foedissime</i> prodidisti..."
