Updated the British English translation.

--- a/po/wesnoth/en_GB.po
+++ b/po/wesnoth/en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-24 18:11+0100\n"
-"PO-Revision-Date: 2012-02-22 21:34-0500\n"
+"PO-Revision-Date: 2012-02-26 06:55-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -127,7 +127,7 @@ msgstr ""
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:131
 msgid "Chat message aging"
-msgstr "Chat Message Ageing"
+msgstr "Chat message ageing"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:132
