updated Galician translation

--- a/po/wesnoth-help/gl.po
+++ b/po/wesnoth-help/gl.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-24 18:11+0100\n"
-"PO-Revision-Date: 2012-03-18 20:23+0100\n"
+"PO-Revision-Date: 2012-03-25 11:52+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -3620,6 +3620,10 @@ msgid ""
 "'m' first to open the chat line).\n"
 "\n"
 msgstr ""
+"Estas ordes poden executarse ben mediante a liña de ordes, prefixándoas con "
+"«:» (tal e como se pode ver aquí) ou desde unha conversa prefixándoas con "
+"«/» (as conversas ábrense coa tecla M de maneira predeterminada).\n"
+"\n"
 
 #. [topic]: id=mp_commands
 #: data/core/help.cfg:835
