updated Chinese (Simplified) translation

--- a/po/wesnoth-dw/zh_CN.po
+++ b/po/wesnoth-dw/zh_CN.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-02-18 14:42+0100\n"
+"POT-Creation-Date: 2012-03-25 14:42+0200\n"
 "PO-Revision-Date: 2011-12-27 13:59+0800\n"
 "Last-Translator: MrKing <yideey@gmail.com>\n"
 "Language-Team: Chinese Simplified <http://code.google.com/p/wesnoth-"
@@ -790,7 +790,7 @@ msgid ""
 msgstr ""
 "狼群早就嗅到了战争的气息，和它们的相遇，只是人鱼磨难的开始。这些狼受着一伙哥"
 "布林的控制。提瑞格斯的兽人们在与凯·劳迪斯的战争中受到了教训，应该暂时还不会来"
-"骚扰人鱼；但是这些哥布林就难说了，他们甚至抢劫自己的同类并被其族人所抛弃。"
+"骚扰人鱼；但是这些地精就难说了，他们甚至抢劫自己的同类并被其族人所抛弃。"
 
 #. [side]: id=Gashnok, type=Goblin Knight, type=Goblin Knight, type=Direwolf Rider, type=Direwolf Rider
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:88
