updated Chinese (Simplified) and Italian translation

--- a/po/wesnoth-help/zh_CN.po
+++ b/po/wesnoth-help/zh_CN.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-03-24 18:11+0100\n"
-"PO-Revision-Date: 2012-02-19 14:06+0800\n"
+"POT-Creation-Date: 2012-03-25 14:42+0200\n"
+"PO-Revision-Date: 2012-03-29 20:12+0800\n"
 "Last-Translator: CloudiDust <cloudidust@gmail.com>\n"
 "Language-Team: Chinese Simplified <http://code.google.com/p/wesnoth-"
 "translation-cn>\n"
@@ -3306,6 +3306,8 @@ msgid ""
 "'m' first to open the chat line).\n"
 "\n"
 msgstr ""
+"这些命令有两种输入方法：一是通过命令行输入，请在命令前加上“:”（如此处所示）；"
+"二是通过聊天窗口输入，请在命令前加上“/”（请先按“m”键来打开聊天窗口）。\n"
 
 #. [topic]: id=mp_commands
 #: data/core/help.cfg:835
