--- a/po/wesnoth-tutorial/it.po
+++ b/po/wesnoth-tutorial/it.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-25 14:42+0200\n"
-"PO-Revision-Date: 2012-02-20 11:02+0100\n"
-"Last-Translator: Antonio Rosella <arosella@yahoo.com>\n"
+"PO-Revision-Date: 2012-03-25 19:35+0100\n"
+"Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8-bit\n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: KBabel 1.11.4\n"
 
@@ -1602,28 +1602,26 @@ msgstr ""
 #. [then]
 #. The unit with unit type $unit.language_name is male.
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1151
-#, fuzzy
 msgid ""
 "No other units can reach that orc. I hope my $unit.language_name survives "
 "its counter-attack! I’d better grab more villages and move everyone closer "
 "for next turn."
 msgstr ""
-"Nessun’altra unità può raggiungere quell’orco: spero che la mia "
-"unitàsopravviva al contrattacco! Sarà meglio che mi impadronisca di più "
-"villaggi e al prossimo turno muova tutti quanti più vicino."
+"Nessun’altra unità può raggiungere quell’orco: spero che il mio $unit."
+"language_name sopravviva al contrattacco! Sarà meglio che mi impadronisca di "
+"più villaggi e al prossimo turno muova tutti quanti più vicino."
 
 #. [else]
 #. The unit with unit type $unit.language_name is female.
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1155
-#, fuzzy
 msgid ""
 "female^No other units can reach that orc. I hope my $unit.language_name "
 "survives its counter-attack! I’d better grab more villages and move everyone "
 "closer for next turn."
 msgstr ""
-"Nessun’altra unità può raggiungere quell’orco: spero che la mia "
-"unitàsopravviva al contrattacco! Sarà meglio che mi impadronisca di più "
-"villaggi e al prossimo turno muova tutti quanti più vicino."
+"Nessun’altra unità può raggiungere quell’orco: spero che la mia $unit."
+"language_name sopravviva al contrattacco! Sarà meglio che mi impadronisca di "
+"più villaggi e al prossimo turno muova tutti quanti più vicino."
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1158
