--- a/po/wesnoth-help/it.po
+++ b/po/wesnoth-help/it.po
@@ -15,13 +15,13 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-24 18:11+0100\n"
-"PO-Revision-Date: 2012-02-20 10:55+0100\n"
-"Last-Translator: Antonio Rosella <arosella@yahoo.com>\n"
+"PO-Revision-Date: 2012-03-25 19:47+0100\n"
+"Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8-bit\n"
+"Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 "X-Poedit-Language: Italian\n"
 "X-Poedit-Country: ITALY\n"
@@ -3623,6 +3623,11 @@ msgid ""
 "'m' first to open the chat line).\n"
 "\n"
 msgstr ""
+"Questi comandi possono essere inviati sia tramite la riga di comando "
+"utilizzando per i comandi il prefisso ':' (come mostrato qui) sia tramite la "
+"chat utilizzando il prefisso '/' (premi 'm' prima per aprire la linea di "
+"comando della chat).\n"
+"\n"
 
 #. [topic]: id=mp_commands
 #: data/core/help.cfg:835
