--- a/po/wesnoth-low/zh_CN.po
+++ b/po/wesnoth-low/zh_CN.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-03-24 18:11+0100\n"
-"PO-Revision-Date: 2012-01-17 15:29+0800\n"
-"Last-Translator: wind <everywherewind@gmail.com>\n"
+"POT-Creation-Date: 2012-03-25 14:42+0200\n"
+"PO-Revision-Date: 2012-03-29 20:13+0800\n"
+"Last-Translator: CloudiDust <cloudidust@gmail.com>\n"
 "Language-Team: Chinese Simplified <http://code.google.com/p/wesnoth-"
 "translation-cn>\n"
 "Language: zh_CN\n"
@@ -2527,7 +2527,7 @@ msgstr ""
 #. [message]: speaker=narrator
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:452
 msgid " Kalenz is able to recruit dwarves from now on."
-msgstr ""
+msgstr " 从现在开始，卡伦茨可以征募矮人了。"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:452
