--- a/po/wesnoth-tutorial/fr.po
+++ b/po/wesnoth-tutorial/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.1-svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-25 14:42+0200\n"
-"PO-Revision-Date: 2012-02-23 09:17+0200\n"
+"PO-Revision-Date: 2012-03-26 15:32+0200\n"
 "Last-Translator: Guillaume Pascal <guillaume.pascal43@laposte.net>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
@@ -1627,24 +1627,19 @@ msgid ""
 "its counter-attack! I’d better grab more villages and move everyone closer "
 "for next turn."
 msgstr ""
-"Aucune autre unité ne peut atteindre cet orc. J'espère que mon $unit."
+"Aucune autre unité ne peut atteindre cet orc. J'espère que notre $unit."
 "language_name survivra à sa contre-attaque ! Je ferais mieux de conquérir "
 "plus de villages et de rapprocher tout le monde pour le prochain tour."
 
 #. [else]
 #. The unit with unit type $unit.language_name is female.
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1155
-#, fuzzy
-#| msgid ""
-#| "No other units can reach that orc. I hope my $unit.language_name survives "
-#| "its counter-attack! I’d better grab more villages and move everyone "
-#| "closer for next turn."
 msgid ""
 "female^No other units can reach that orc. I hope my $unit.language_name "
 "survives its counter-attack! I’d better grab more villages and move everyone "
 "closer for next turn."
 msgstr ""
-"Aucune autre unité ne peut atteindre cet orc. J'espère que mon $unit."
+"Aucune autre unité ne peut atteindre cet orc. J'espère que notre $unit."
 "language_name survivra à sa contre-attaque ! Je ferais mieux de conquérir "
 "plus de villages et de rapprocher tout le monde pour le prochain tour."
 
