--- a/po/wesnoth/sk.po
+++ b/po/wesnoth/sk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.2\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-02-19 19:42+0100\n"
+"PO-Revision-Date: 2012-03-31 20:13+0100\n"
 "Last-Translator: aceman <acelists@atlas.sk>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -5159,11 +5159,16 @@ msgid "prompt^Command:"
 msgstr "Príkaz:"
 
 #: src/mouse_events.cpp:703
+#, fuzzy
+#| msgid ""
+#| "You cannot move your leader away from the keep with some planned recruits "
+#| "or recalls left."
 msgid ""
 "You cannot move your leader away from the keep with some planned recruits "
 "left."
 msgstr ""
-"Nemôžeš pohnúť veliteľom z pevnosti keď sú ešte naplánované verbovania."
+"Nemôžeš pohnúť veliteľom z pevnosti, keď sú ešte naplánované verbovania "
+"alebo privolávania."
 
 #: src/mouse_events.cpp:834 src/mouse_events.cpp:914
 msgid "Attack Enemy"
@@ -6556,7 +6561,6 @@ msgstr "Skryť plán pre $player"
 msgid "Whiteboard Options"
 msgstr "Nastavenia tabule"
 
-#~| msgid "Romanian Translation"
 #~ msgid "Ukrainian Translation"
 #~ msgstr "Ukrajinský preklad"
 
