--- a/po/wesnoth/sk.po
+++ b/po/wesnoth/sk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.2\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-31 10:45+0200\n"
-"PO-Revision-Date: 2012-02-19 19:42+0100\n"
+"PO-Revision-Date: 2012-03-31 20:13+0100\n"
 "Last-Translator: aceman <acelists@atlas.sk>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -5164,15 +5164,12 @@ msgid "prompt^Command:"
 msgstr "Príkaz:"
 
 #: src/mouse_events.cpp:703
-#, fuzzy
-#| msgid ""
-#| "You cannot move your leader away from the keep with some planned recruits "
-#| "left."
 msgid ""
 "You cannot move your leader away from the keep with some planned recruits or "
 "recalls left."
 msgstr ""
-"Nemôžeš pohnúť veliteľom z pevnosti keď sú ešte naplánované verbovania."
+"Nemôžeš pohnúť veliteľom z pevnosti, keď sú ešte naplánované verbovania "
+"alebo privolávania."
 
 #: src/mouse_events.cpp:834 src/mouse_events.cpp:914
 msgid "Attack Enemy"
