--- a/po/wesnoth-lib/gl.po
+++ b/po/wesnoth-lib/gl.po
@@ -9,15 +9,14 @@
 # Fran Diéguez <fran dot dieguez at glug dot es>, 2008.
 # Adrián Chaves Fernández <adriyetichaves@gmail.com>, 2010.
 # Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>, 2010, 2011.
-# Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail.com>, 2011.
+# Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail.com>, 2011, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-03 10:40+0100\n"
-"PO-Revision-Date: 2011-12-15 21:20+0100\n"
-"Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"POT-Creation-Date: 2012-01-22 15:00+0100\n"
+"PO-Revision-Date: 2012-04-01 10:14+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
@@ -31,8 +30,9 @@ msgstr ""
 "com>\n"
 "com>\n"
 "com>\n"
+"com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.2\n"
+"X-Generator: Lokalize 1.4\n"
 
 #. [terrain_type]: id=deep_water_gray
 #. [terrain_type]: id=deep_water
@@ -3449,30 +3449,40 @@ msgid "Skip Animation"
 msgstr "Saltarse a animación"
 
 #: src/hotkeys.cpp:113
+#, fuzzy
+#| msgid "whiteboard^Planning Mode"
 msgid "Toggle Planning Mode"
-msgstr "Activar o modo de planificación"
+msgstr "Modo de planificación"
 
 #: src/hotkeys.cpp:114
 msgid "Execute Planned Action"
 msgstr "Executar a acción planificada"
 
 #: src/hotkeys.cpp:115
+#, fuzzy
+#| msgid "Execute Planned Action"
 msgid "Execute All Actions"
-msgstr "Executar todas as accións"
+msgstr "Executar a acción planificada"
 
 #: src/hotkeys.cpp:116
 msgid "Delete Planned Action"
 msgstr "Eliminar a acción planificada"
 
 #: src/hotkeys.cpp:117
+#, fuzzy
+#| msgid "whiteboard^Move Action Up"
 msgid "Move Action Up Queue"
-msgstr "Adiantar a acción na cola"
+msgstr "Adiantar a acción"
 
 #: src/hotkeys.cpp:118
+#, fuzzy
+#| msgid "whiteboard^Move Action Down"
 msgid "Move Action Down Queue"
-msgstr "Atrasar a acción na cola"
+msgstr "Atrasar a acción"
 
 #: src/hotkeys.cpp:119
+#, fuzzy
+#| msgid "whiteboard^Suppose Dead"
 msgid "Suppose Dead"
 msgstr "Dar por morto"
 
@@ -3931,6 +3941,15 @@ msgid ""
 msgstr ""
 "A clave «$deprecated_key|» chámase agora «$key|». «$deprecated_key|» deixará "
 "de poder empregarse a partir da versión $removal_version do xogo."
+
+#~ msgid "whiteboard^Execute Action"
+#~ msgstr "Executar a acción"
+
+#~ msgid "whiteboard^Execute All Actions"
+#~ msgstr "Executar as accións"
+
+#~ msgid "whiteboard^Delete Action"
+#~ msgstr "Eliminar a acción"
 
 #~ msgid "Resize map"
 #~ msgstr "Cambiar as dimensións do mapa"
