updated Hungarian translation

--- a/po/wesnoth/hu.po
+++ b/po/wesnoth/hu.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: hu-wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-31 10:45+0200\n"
-"PO-Revision-Date: 2012-02-20 11:04+0100\n"
+"PO-Revision-Date: 2012-04-01 12:02+0200\n"
 "Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "Language: hu\n"
@@ -5199,16 +5199,12 @@ msgid "prompt^Command:"
 msgstr "Parancs:"
 
 #: src/mouse_events.cpp:703
-#, fuzzy
-#| msgid ""
-#| "You cannot move your leader away from the keep with some planned recruits "
-#| "left."
 msgid ""
 "You cannot move your leader away from the keep with some planned recruits or "
 "recalls left."
 msgstr ""
-"Nem hagyhatod ott a vezéreddel a várkastélyt, amíg tervezett toborzások "
-"vannak hátra."
+"Nem hagyhatod ott a vezéreddel a várkastélyt, amíg tervezett toborzások vagy "
+"visszahívások vannak hátra."
 
 #: src/mouse_events.cpp:834 src/mouse_events.cpp:914
 msgid "Attack Enemy"
