--- a/po/wesnoth-lib/sr@ijekavianlatin.po
+++ b/po/wesnoth-lib/sr@ijekavianlatin.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-lib\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-31 10:45+0200\n"
-"PO-Revision-Date: 2011-12-26 13:33+0100\n"
+"PO-Revision-Date: 2012-04-01 16:53+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
@@ -3393,50 +3393,38 @@ msgstr "Preskoči animaciju"
 
 #. TRANSLATORS: whiteboard menu entry: toggle planning mode
 #: src/hotkeys.cpp:114
-#, fuzzy
-#| msgid "Toggle Planning Mode"
 msgid "whiteboard^Planning Mode"
 msgstr "Režim planiranja"
 
 #. TRANSLATORS: whiteboard menu entry: execute planned action
 #: src/hotkeys.cpp:116
-#, fuzzy
-#| msgid "Execute All Actions"
 msgid "whiteboard^Execute Action"
-msgstr "Izvrši sve radnje"
+msgstr "Izvrši radnju"
 
 #. TRANSLATORS: whiteboard menu entry: execute all planned actions
 #: src/hotkeys.cpp:118
-#, fuzzy
-#| msgid "Execute All Actions"
 msgid "whiteboard^Execute All Actions"
 msgstr "Izvrši sve radnje"
 
 #. TRANSLATORS: whiteboard menu entry: delete planned action
 #: src/hotkeys.cpp:120
 msgid "whiteboard^Delete Action"
-msgstr ""
+msgstr "Obriši radnju"
 
 #. TRANSLATORS: whiteboard menu entry: move planned action up queue
 #: src/hotkeys.cpp:122
-#, fuzzy
-#| msgid "Move Action Up Queue"
 msgid "whiteboard^Move Action Up"
-msgstr "Pomeri radnju nagore u redu"
+msgstr "Pomeri radnju nagore"
 
 #. TRANSLATORS: whiteboard menu entry: move planned action down queue
 #: src/hotkeys.cpp:124
-#, fuzzy
-#| msgid "Move Action Down Queue"
 msgid "whiteboard^Move Action Down"
-msgstr "Pomeri radnju nadole u redu"
+msgstr "Pomeri radnju nadole"
 
 #. TRANSLATORS: whiteboard menu entry: plan as if unit was dead
 #: src/hotkeys.cpp:126
-#, fuzzy
-#| msgid "Suppose Dead"
 msgid "whiteboard^Suppose Dead"
-msgstr "Pretpostavi mrtvo"
+msgstr "Pretpostavi mrtvom"
 
 #: src/hotkeys.cpp:128
 msgid "Quit to Desktop"
@@ -3886,9 +3874,3 @@ msgid ""
 msgstr ""
 "Ključ ‘$deprecated_key’ je preimenovan u ‘$key’. Podrška za "
 "‘$deprecated_key’ biće uklonjena u izdanju $removal_version."
-
-#~ msgid "Execute Planned Action"
-#~ msgstr "Izvrši planiranu radnju"
-
-#~ msgid "Delete Planned Action"
-#~ msgstr "Obriši planiranu radnju"
