--- a/po/wesnoth-low/sr@ijekavian.po
+++ b/po/wesnoth-low/sr@ijekavian.po
@@ -1,14 +1,14 @@
 # Translation of wesnoth-low.po into Serbian.
 # Copyright © 2009, Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
-# Chusslove Illich <caslav.ilic@gmx.net>, 2009, 2010, 2011.
+# Chusslove Illich <caslav.ilic@gmx.net>, 2009, 2010, 2011, 2012.
 # Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-low\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-24 18:11+0100\n"
-"PO-Revision-Date: 2011-12-09 15:35+0100\n"
+"PO-Revision-Date: 2012-04-01 16:53+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
@@ -2708,7 +2708,7 @@ msgstr ""
 #. [message]: speaker=narrator
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:452
 msgid " Kalenz is able to recruit dwarves from now on."
-msgstr ""
+msgstr " Каленз од сада може да унајмљује патуљке."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:452
