--- a/po/wesnoth-help/sr@latin.po
+++ b/po/wesnoth-help/sr@latin.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-help\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-24 18:11+0100\n"
-"PO-Revision-Date: 2012-01-07 13:20+0100\n"
+"PO-Revision-Date: 2012-04-01 16:53+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
@@ -3494,6 +3494,10 @@ msgid ""
 "'m' first to open the chat line).\n"
 "\n"
 msgstr ""
+"Ove naredbe moguće je izdati ili kroz komandnu liniju uz prefiks ‘:’ (kao "
+"što je dato ovde) ili kroz ćaskanje uz prefiks ‘/’ (prvo pritisnite ‘m’ da "
+"otvorite liniju za ćaskanje).\n"
+"\n"
 
 #. [topic]: id=mp_commands
 #: data/core/help.cfg:835
