--- a/po/wesnoth-tutorial/sr@latin.po
+++ b/po/wesnoth-tutorial/sr@latin.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-tutorial\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-25 14:42+0200\n"
-"PO-Revision-Date: 2011-12-26 13:33+0100\n"
+"PO-Revision-Date: 2012-04-01 16:53+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
@@ -1562,17 +1562,12 @@ msgstr ""
 #. [else]
 #. The unit with unit type $unit.language_name is female.
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1155
-#, fuzzy
-#| msgid ""
-#| "No other units can reach that orc. I hope my $unit.language_name survives "
-#| "its counter-attack! I’d better grab more villages and move everyone "
-#| "closer for next turn."
 msgid ""
 "female^No other units can reach that orc. I hope my $unit.language_name "
 "survives its counter-attack! I’d better grab more villages and move everyone "
 "closer for next turn."
 msgstr ""
-"Nijedna druga jedinica ne može da dopre do tog orka. Nadam se da će moj "
+"Nijedna druga jedinica ne može da dopre do tog orka. Nadam se da će moja "
 "$unit.language_name preživeti njegov protivnapad! Bolje da zgrabim još sela "
 "i približim druge u sledećem potezu."
 
