--- a/po/wesnoth/sr@ijekavian.po
+++ b/po/wesnoth/sr@ijekavian.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-31 10:45+0200\n"
-"PO-Revision-Date: 2012-02-18 17:25+0100\n"
+"PO-Revision-Date: 2012-04-01 16:53+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
@@ -5225,14 +5225,12 @@ msgid "prompt^Command:"
 msgstr "наредба:"
 
 #: src/mouse_events.cpp:703
-#, fuzzy
-#| msgid ""
-#| "You cannot move your leader away from the keep with some planned recruits "
-#| "left."
 msgid ""
 "You cannot move your leader away from the keep with some planned recruits or "
 "recalls left."
-msgstr "Не можете померити вођа са куле док има још планираних унајмљивања."
+msgstr ""
+"Не можете померити вођа са куле док има још планираних унајмљивања или "
+"сазивања."
 
 #: src/mouse_events.cpp:834 src/mouse_events.cpp:914
 msgid "Attack Enemy"
