--- a/po/wesnoth-manual/et.po
+++ b/po/wesnoth-manual/et.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3.7+svn\n"
-"POT-Creation-Date: 2012-01-03 10:55+0100\n"
-"PO-Revision-Date: 2011-12-30 19:20+0300\n"
+"POT-Creation-Date: 2012-01-22 14:59+0100\n"
+"PO-Revision-Date: 2012-04-02 21:57+0300\n"
 "Last-Translator: Kaido Kikkas <kakk@kakupesa.net>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -2039,6 +2039,15 @@ msgstr "Liiguta tegevus järjekorras ettepoole"
 # type: Content of: <book><chapter><section><simpara>
 #. type: Content of: <book><chapter><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:1307
+#, fuzzy
+#| msgid ""
+#| "Each side is given some amount of gold to begin with, and receives 2 gold "
+#| "pieces per turn, plus 2 more gold pieces for every village that side "
+#| "controls. In a campaign, starting gold is a minimum amount defined by the "
+#| "scenario, which is typically lower as the difficulty level increases. In "
+#| "addition you often get a percentage of gold to carry over from the last "
+#| "scenario played. The exact percentage depends on the scenario and is "
+#| "usually displayed as part of the scenario objectives."
 msgid ""
 "Each side is given some amount of gold to begin with, and receives 2 gold "
 "pieces per turn, plus 2 more gold pieces for every village that side "
@@ -2048,9 +2057,10 @@ msgid ""
 msgstr ""
 "Iga osapool saab alguseks mingi koguse kulda ja teenib 2 kuldraha igal "
 "käigul, pluss veel kaks iga endale kuuluva küla kohta. Sõjakäigus "
-"alustatakse stsenaariumi kas 80%-ga eelmise stsenaariumi lõpusummast või "
-"stsenaariumi miinimumkogusega vastavalt sellele, kumb on suurem. "
-"Miinimumkogus on enamasti seda väiksem, mida kõrgem on mängu raskusaste."
+"alustatakse stsenaariumi mingi summaga, mis on enamasti seda väiksem, mida "
+"kõrgem on mängu raskusaste. Lisaks sellele kandub sageli osa kulda üle "
+"eelmisest stsenaariumist - täpne summa sõltub stsenaariumist ning seda "
+"näidatakse enamasti eesmärkide aknas."
 
 #. type: Content of: <book><chapter><section><section><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:1313
