updated Estonian translation

--- a/po/wesnoth-help/et.po
+++ b/po/wesnoth-help/et.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.4 Estonian translation\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-24 18:11+0100\n"
-"PO-Revision-Date: 2012-01-07 19:12+0300\n"
+"PO-Revision-Date: 2012-04-02 21:52+0300\n"
 "Last-Translator: Kaido Kikkas <kakk@kakupesa.net>\n"
 "Language-Team: Kaido Kikkas <kakk@kakupesa.net>\n"
 "Language: \n"
@@ -3431,6 +3431,10 @@ msgid ""
 "'m' first to open the chat line).\n"
 "\n"
 msgstr ""
+"Neid käske saab anda kas käsurealt (kirjutades nende ette kooloni) või "
+"vestluseaknast (kirjutades nende ette kaldkriipsu; eelnevalt tuleb vestluse "
+"avamiseks vajutada 'm').\n"
+" \n"
 
 #. [topic]: id=mp_commands
 #: data/core/help.cfg:835
